--- a/Blocks/one-platform-to-run-your-ecommerce.html
+++ b/Blocks/one-platform-to-run-your-ecommerce.html
@@ -7,19 +7,22 @@
       <img src="https://ca81682d3213.usc.site.uskinned.me/media/jmwdtejt/referral-user.png" alt="B2B"> B2B
     </div>
     <div class="tab-item" data-tab="multi-store">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/ec0oyd1u/multiple-alt.png" alt="Multi-store"> MULTI-STORE
+      <img src="https://ca81682d3213.usc.site.uskinned.me/media/ec0oyd1u/multiple-alt.png" alt="Multi-store">
+      MULTI-STORE
     </div>
-        <div class="tab-item" data-tab="r/t data sync">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/gmcpaywm/data-transfer.png" alt="R/T data sync"> R/T DATA SYNC
+    <div class="tab-item" data-tab="r/t data sync">
+      <img src="https://ca81682d3213.usc.site.uskinned.me/media/gmcpaywm/data-transfer.png" alt="R/T data sync"> R/T
+      DATA SYNC
     </div>
     <div class="tab-item" data-tab="industries">
       <img src="https://ca81682d3213.usc.site.uskinned.me/media/qahflao4/industies.png" alt="Industries"> INDUSTRIES
     </div>
+    <div class="tab-item" data-tab="marketplaces">
+      <img src="https://ca81682d3213.usc.site.uskinned.me/media/wlodbrp0/marketplace-store.png" alt="Marketplaces">
+      MARKETPLACES
+    </div>
     <div class="tab-item" data-tab="shipping">
       <img src="https://ca81682d3213.usc.site.uskinned.me/media/jlubpir4/truck-side.png" alt="Shipping"> SHIPPING
-    </div>
-    <div class="tab-item" data-tab="marketplaces">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/wlodbrp0/marketplace-store.png" alt="Marketplaces"> MARKETPLACES
     </div>
     <div class="tab-item" data-tab="warehouse">
       <img src="https://ca81682d3213.usc.site.uskinned.me/media/tiblrj5f/garage.png" alt="Warehouse"> WAREHOUSE
@@ -34,99 +37,123 @@
       <div class="text-side">
         <p class="heading sm c4-heading">Product Information Management</p>
         <p>Manage your online catalog directly from Business Central.</p>
-         <ul>
-        <li>Rich product data</li>  
-        <li>Attributes & attribute sets</li>
-        <li>Grouped & configurable products</li>
-        <li>Product variations</li>
-        <li>Category management</li>
-        <li>Cross-selling & upselling</li>
-       </ul>
-      <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/" class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
-        <span></span>
-        C365 FOR MAGENTO
+        <ul>
+          <li>Rich product descriptions and translations</li>
+          <li>Attributes & attribute sets</li>
+          <li>Grouped & configurable products</li>
+          <li>Product variations</li>
+          <li>Categories</li>
+          <li>Cross-selling & upselling</li>
+          <li>Images, videos and documents</li>
+        </ul>
+        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+          <span></span>
+          Commerce 365 FOR MAGENTO
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
+          alt="Email Image">
       </div>
     </div>
 
     <div class="tab-panel" id="b2b">
       <div class="text-side">
         <p class="heading sm c4-heading">Improve your B2B buying experience</p>
-        <p>Use your ERP data on your Magento storefront for B2B functionalities.</p>
+        <p>Make use of all your ERP data and turn your Magento into a B2B portal.</p>
         <ul>
-        <li>Advanced pricing</li>
-        <li>Sales document history</li>
-        <li>Sub-accounts</li>
-        <li>Payment methods</li>
-        <li>Custom shipping options</li>
+          <li>Business Central price lists in Magento</li>
+          <li>Full sales document history</li>
+          <li>Sub-accounts</li>
+          <li>Customer attributes</li>
+          <li>Order attributes</li>
+          <li>Custom checkouts</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/" class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
-        <span></span>
-        C365 FOR MAGENTO
+        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento-b2b/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+          <span></span>
+          Commerce 365 FOR MAGENTO B2B
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
+          alt="Email Image">
       </div>
     </div>
 
     <div class="tab-panel" id="multi-store">
       <div class="text-side">
         <p class="heading sm c4-heading">Manage all your Magento stores directly from Business Central</p>
-        <p>Keep your ecommerce operations centralized with multi-store and multi currency management.</p>
+        <p>Whether you operate 1, 4 or 27 stores. Whether they are B2C, B2B, or combination of both. Business Central is
+          fully aligned with all Magento multi-store features.</p>
         <ul>
-        <li>Multi-site, mulitstore setup in BC</li>
-        <li>Run multiple B2B & B2C stores - in different languages and currencies</li>
-        <li>Store-specific configurations</li>
+          <li>Run multiple B2B & B2C stores - in different languages and currencies</li>
+          <li>Multi-site and multi-store support</li>
+          <li>Store-specific configurations</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/" class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          C365 FOR MAGENTO
-          </a>
+          Commerce 365 FOR MAGENTO
+        </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/igibv5px/multistore.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/igibv5px/multistore.png"
+          alt="Email Image">
       </div>
     </div>
 
     <div class="tab-panel" id="r/t data sync">
       <div class="text-side">
-            <p class="heading sm c4-heading">Real-time data synchronization</p>
-        <p>Ensure your Magento store and Business Central always reflect the latest data — no manual updates needed.</p>
+        <p class="heading sm c4-heading">Real-time data synchronization</p>
+        <p>Ensure your Magento stores and Business Central always reflect the latest data — no manual updates needed.
+        </p>
         <ul>
-          <li>Product information</li>
-          <li>Inventory levels</li>
-          <li>Customer details</li>
-          <li>Web orders</li>
+          <li>Product data</li>
+          <li>Inventory levels (MSI supported)</li>
+          <li>Customer accounts</li>
+          <li>Sales documents</li>
+          <li>Everything</li>
+          <li>Up-to-date</li>
+          <li>Always</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/" class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          C365 FOR MAGENTO
-          </a>
+          Commerce 365 FOR MAGENTO
+        </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/tkblpxmu/data-synchronization.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/tkblpxmu/data-synchronization.png"
+          alt="Email Image">
       </div>
     </div>
-    
+
     <div class="tab-panel" id="industries">
       <div class="text-side">
         <p class="heading sm c4-heading">Industry specific solutions</p>
-        <p>Each industry has different ecommerce needs. By listening to our customers, we've developed what you need.</p>
+        <p>Each industry has different ecommerce needs. By listening to our customers and working with our partners,
+          we've developed what you need.
+        </p>
         <ul>
-        <li>Retail</li>
-        <li>Wholesale & Distribution</li>
-        <li>Steel</li>
-        <li>Timber</li>
-        <li>Wood</li>
-        <li>Fasion</li>
+          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-retail/"
+              title="Ecommerce for Retail">Retail</a></li>
+          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-wholesale/"
+              title="Ecommerce for Wholesale & Distribution">Wholesale & Distribution</a></li>
+          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-steel/"
+              title="Ecommerce for Steel">Steel</a></li>
+          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-timber/"
+              title="Ecommerce for Timber">Timber</a></li>
+          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-food-and-beverage/"
+              title="Ecommerce for Food and Beverage">Food and Beverage</a></li>
+          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-fashion/"
+              title="Ecommerce for Fashion">Fasion</a></li>
         </ul>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
+          alt="Email Image">
       </div>
     </div>
 
@@ -134,50 +161,69 @@
       <div class="text-side">
         <p class="heading sm c4-heading">Shipping simplified: Smarter, faster, integrated</p>
         <p>Integrate Sendcloud's powerful shipping features into Business Central.</p>
-                <ul>
+        <ul>
           <li>Instantly connect to 100+ carriers worldwide</li>
-          <li>Create your own automation rules</li>
-          <li>Generate shipping labels while posting sales orders</li>
+          <li>Automatically select the best carrier for each shipment</li>
+          <li>Generate and print shipping labels automatically</li>
+          <li>Add custom shipping rules</li>
           <li>Branded Track & Trace</li>
+          <li>Integrate your returns processes</li>
         </ul>
         <p>Fully automate your shipping and return process.</p>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-sendcloud/" class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-sendcloud/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          C365 FOR SENDCLOUD
-          </a>
+          Commerce 365 FOR SENDCLOUD
+        </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
+          alt="Email Image">
       </div>
     </div>
 
     <div class="tab-panel" id="marketplaces">
       <div class="text-side">
         <p class="heading sm c4-heading">Turn BC into a marketplace powerhouse</p>
-        <p>Manage all your marketplace listings from a single platform.</p>
-                <ul>
-          <li>NVision is a ChannelEngine certified partner</li>
+        <p>Manage all your marketplace processes from a single platform.</p>
+        <ul>
+          <li>ChannelEngine certified solution</li>
           <li>Connect Business Central to 950+ local and global marketplaces</li>
+          <li>Manage products, inventory and channel orders within BC</li>
           <li>Tailor product listings for different channels</li>
-          <li>Make custom pricing rules and discounts based on country or marketplace</li>
+          <li>Custom price rules and discounts based on country or marketplace</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-channelengine/" class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-channelengine/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          C365 FOR CHANNELENGINE
-          </a>
+          Commerce 365 FOR CHANNELENGINE
+        </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
+          alt="Email Image">
       </div>
     </div>
 
     <div class="tab-panel" id="warehouse">
       <div class="text-side">
         <p class="heading sm c4-heading">Warehouse management made easy</p>
-        <p>Manage everything from your handheld device with Tasklet Factory Mobile WMS.</p>
+        <p>We have integrated our shipping solutions with your warehouse management system.</p>
+        <ul>
+          <li>Tasklet Factory Mobile WMS</li>
+          <li>Multisoft WMS MobileNAV</li>
+          <li>Custom warehouse integrations</li>
+          <li>SDK</li>
+        </ul>
+        <!-- <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-channelengine/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+          <span></span>
+          Commerce 365 FOR CHANNELENGINE
+        </a> -->
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png" alt="Email Image">
+        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
+          alt="Email Image">
       </div>
     </div>
   </div>
