Text changes, urls changed to n.vision

--- a/Blocks/one-platform-to-run-your-ecommerce.html
+++ b/Blocks/one-platform-to-run-your-ecommerce.html
@@ -1,31 +1,31 @@
 <div class="tab-container">
   <div class="tab-menu">
     <div class="tab-item active" data-tab="pim">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/cttmwjto/guide-alt.png" alt="PIM"> BUILT-IN PIM
+      <img src="https://n.vision/media/ggefc1yl/built-in-pim-icon.png" alt="Arrows pointing at a cogwheel indicating built in PIM"> BUILT-IN PIM
     </div>
     <div class="tab-item" data-tab="b2b">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/jmwdtejt/referral-user.png" alt="B2B"> B2B
+      <img src="https://n.vision/media/1wsbjpnw/b2b-platform-icon.png" alt="B2B platform icon"> B2B
     </div>
     <div class="tab-item" data-tab="multi-store">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/ec0oyd1u/multiple-alt.png" alt="Multi-store">
+      <img src="https://n.vision/media/vgjfjrsq/multi-store-icon.png" alt="Webpage on top of another webpage indicating multiple strores">
       MULTI-STORE
     </div>
     <div class="tab-item" data-tab="r/t data sync">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/gmcpaywm/data-transfer.png" alt="R/T data sync"> R/T
+      <img src="https://n.vision/media/s1jdcjbt/real-time-data-sync-icon.png" alt="Data page with arrows pointing in different directions indicating data sync"> R/T
       DATA SYNC
     </div>
     <div class="tab-item" data-tab="industries">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/qahflao4/industies.png" alt="Industries"> INDUSTRIES
+      <img src="https://n.vision/media/1jflyedq/industries-icon.png" alt="Icon indicating different industries"> INDUSTRIES
     </div>
     <div class="tab-item" data-tab="marketplaces">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/wlodbrp0/marketplace-store.png" alt="Marketplaces">
+      <img src="https://n.vision/media/nw0nf1ow/marketplaces-icon.png" alt="World icon woth arrows pointing to four directions indicating expansion through marketplaces">
       MARKETPLACES
     </div>
     <div class="tab-item" data-tab="shipping">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/jlubpir4/truck-side.png" alt="Shipping"> SHIPPING
+      <img src="https://n.vision/media/m4sfduay/shipping-tracking-icon.png" alt="Delivery van with tracking icon indicating shipping"> SHIPPING
     </div>
     <div class="tab-item" data-tab="warehouse">
-      <img src="https://ca81682d3213.usc.site.uskinned.me/media/tiblrj5f/garage.png" alt="Warehouse"> WAREHOUSE
+      <img src="https://n.vision/media/ivphjm55/warehouse-icon.png" alt="Warehouse management icon"> WAREHOUSE
     </div>
 
     <div class="tab-indicator"></div>
@@ -46,22 +46,22 @@
           <li>Cross-selling & upselling</li>
           <li>Images, videos and documents</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/"
+        <a href="https://n.vision/products/commerce-365-for-magento/"
           class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          Commerce 365 FOR MAGENTO
+          Explore integration
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/vw0lljmo/product-page-pim.webp"
+          alt="Magento product page coffee machine">
       </div>
     </div>
 
     <div class="tab-panel" id="b2b">
       <div class="text-side">
         <p class="heading sm c4-heading">Improve your B2B buying experience</p>
-        <p>Make use of all your ERP data and turn your Magento into a B2B portal.</p>
+        <p>Turn your Magento into a powerful B2B self-service portal using Business Central data.</p>
         <ul>
           <li>Business Central price lists in Magento</li>
           <li>Full sales document history</li>
@@ -70,15 +70,15 @@
           <li>Order attributes</li>
           <li>Custom checkouts</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento-b2b/"
+        <a href="https://n.vision/products/commerce-365-for-magento-b2b/"
           class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          Commerce 365 FOR MAGENTO B2B
+          B2B solution
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/itqkwqww/sales-document-history-b2b.webp"
+          alt="Turn your B2B Magento storefront into a self-service portal">
       </div>
     </div>
 
@@ -92,15 +92,15 @@
           <li>Multi-site and multi-store support</li>
           <li>Store-specific configurations</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/"
+        <a href="https://n.vision/products/commerce-365-for-magento/"
           class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          Commerce 365 FOR MAGENTO
+          Multi-store
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/igibv5px/multistore.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/rsvbv0hk/multistores-magento.webp"
+          alt="Run multiple Magento stores in different languages and currencies">
       </div>
     </div>
 
@@ -114,19 +114,17 @@
           <li>Inventory levels (MSI supported)</li>
           <li>Customer accounts</li>
           <li>Sales documents</li>
-          <li>Everything</li>
-          <li>Up-to-date</li>
-          <li>Always</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-magento/"
+          <p>Everything up-to-date, always.</p>
+        <a href="https://n.vision/products/commerce-365-for-magento/"
           class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          Commerce 365 FOR MAGENTO
+          Sync in real-time
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/tkblpxmu/data-synchronization.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/q4kdcjq2/real-time-data-sync.webp"
+          alt="Business Central and Magento real time data synchronization">
       </div>
     </div>
 
@@ -137,81 +135,86 @@
           we've developed what you need.
         </p>
         <ul>
-          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-retail/"
+          <li><a class="custom-link" href="https://n.vision/ecommerce-for-retail/"
               title="Ecommerce for Retail">Retail</a></li>
-          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-wholesale/"
+          <li><a class="custom-link" href="https://n.vision/ecommerce-for-wholesale/"
               title="Ecommerce for Wholesale & Distribution">Wholesale & Distribution</a></li>
-          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-steel/"
+          <li><a class="custom-link" href="https://n.vision/ecommerce-for-steel/"
               title="Ecommerce for Steel">Steel</a></li>
-          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-timber/"
+          <li><a class="custom-link" href="https://n.vision/ecommerce-for-timber/"
               title="Ecommerce for Timber">Timber</a></li>
-          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-food-and-beverage/"
+          <li><a class="custom-link" href="https://n.vision/ecommerce-for-food-and-beverage/"
               title="Ecommerce for Food and Beverage">Food and Beverage</a></li>
-          <li><a href="https://ca81682d3213.usc.site.uskinned.me/ecommerce-for-fashion/"
+          <li><a class="custom-link" href="https://n.vision/ecommerce-for-fashion/"
               title="Ecommerce for Fashion">Fasion</a></li>
         </ul>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/lo1hviyl/industries-acadon.webp"
+          alt="Acadon ERP software for timber production">
       </div>
     </div>
 
-    <div class="tab-panel" id="shipping">
-      <div class="text-side">
-        <p class="heading sm c4-heading">Shipping simplified: Smarter, faster, integrated</p>
-        <p>Integrate Sendcloud's powerful shipping features into Business Central.</p>
-        <ul>
-          <li>Instantly connect to 100+ carriers worldwide</li>
-          <li>Automatically select the best carrier for each shipment</li>
-          <li>Generate and print shipping labels automatically</li>
-          <li>Add custom shipping rules</li>
-          <li>Branded Track & Trace</li>
-          <li>Integrate your returns processes</li>
-        </ul>
-        <p>Fully automate your shipping and return process.</p>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-sendcloud/"
-          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
-          <span></span>
-          Commerce 365 FOR SENDCLOUD
-        </a>
-      </div>
-      <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
-          alt="Email Image">
-      </div>
-    </div>
-
+    
     <div class="tab-panel" id="marketplaces">
       <div class="text-side">
         <p class="heading sm c4-heading">Turn BC into a marketplace powerhouse</p>
         <p>Manage all your marketplace processes from a single platform.</p>
         <ul>
           <li>ChannelEngine certified solution</li>
-          <li>Connect Business Central to 950+ local and global marketplaces</li>
-          <li>Manage products, inventory and channel orders within BC</li>
+          <li>Connect BC to 950+ marketplaces</li>
+          <li>Manage products, inventory and orders in BC</li>
           <li>Tailor product listings for different channels</li>
           <li>Custom price rules and discounts based on country or marketplace</li>
         </ul>
-        <a href="https://ca81682d3213.usc.site.uskinned.me/products/commerce-365-for-channelengine/"
+        <a href="https://n.vision/products/commerce-365-for-channelengine/"
           class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
           <span></span>
-          Commerce 365 FOR CHANNELENGINE
+          Marketplace integration
         </a>
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/pqtlphby/marketplaces-channelengine.webp"
+          alt="Unlock marketplace growth with ChannelEngine">
       </div>
     </div>
+
+
+    <div class="tab-panel" id="shipping">
+      <div class="text-side">
+        <p class="heading sm c4-heading">Shipping simplified: Smarter, faster, integrated</p>
+        <p>Integrate Sendcloud's powerful shipping features into Business Central.</p>
+        <ul>
+          <li>Instantly connect to 160+ carriers worldwide</li>
+          <li>Auto-select the best carrier for every shipment</li>
+          <li>Auto-generate and print shipping labels</li>
+          <li>Add custom shipping rules</li>
+          <li>Branded Track & Trace</li>
+        </ul>
+        <p>Fully automate your shipping and return process.</p>
+        <a href="https://n.vision/products/commerce-365-for-sendcloud/"
+          class="btn boxed-btn btn-lg c11-btn-bg c11-btn-bg-solid c11-btn-bg-hover-solid c11-btn-text c11-btn-borders">
+          <span></span>
+          Shipping integration
+        </a>
+      </div>
+      <div class="image-side">
+        <img class="tab-image" src="https://n.vision/media/mbzfkveg/shipping-sendcloud.webp"
+          alt="Ship with Sendcloud like the big brands do">
+      </div>
+    </div>
+
 
     <div class="tab-panel" id="warehouse">
       <div class="text-side">
         <p class="heading sm c4-heading">Warehouse management made easy</p>
         <p>We have integrated our shipping solutions with your warehouse management system.</p>
         <ul>
-          <li>Tasklet Factory Mobile WMS</li>
-          <li>Multisoft WMS MobileNAV</li>
+          <li>
+            <a class="custom-link" ahref="https://n.vision/products/commerce-365-for-sendcloud/#tasklet-wms">
+            Tasklet Factory Mobile WMS
+            </a>
+          </li>
           <li>Custom warehouse integrations</li>
           <li>SDK</li>
         </ul>
@@ -222,8 +225,8 @@
         </a> -->
       </div>
       <div class="image-side">
-        <img class="tab-image" src="https://ca81682d3213.usc.site.uskinned.me/media/u5ccc5k5/paperless-test.png"
-          alt="Email Image">
+        <img class="tab-image" src="https://n.vision/media/wdvcfdf1/warehouse-tasklet.webp"
+          alt="Warehouse management with Tasklet Factory Mobile integrated">
       </div>
     </div>
   </div>
